[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Change_scene_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI components/Pokemon_info_page_movements.gd" type="Script" id=2]
[ext_resource path="res://assets/themedark_letters_label.tres" type="Theme" id=3]
[ext_resource path="res://assets/button_bag.tres" type="Theme" id=4]
[ext_resource path="res://assets/pokemon_info_slides/moves_info.tres" type="Texture" id=5]
[ext_resource path="res://assets/pokemon_info_slides/menu1.tres" type="Texture" id=6]
[ext_resource path="res://assets/pokemon_info_slides/info_sprite_holder.tres" type="Texture" id=7]
[ext_resource path="res://assets/pokemon_info_slides/background_info.tres" type="Texture" id=8]
[ext_resource path="res://Scenes/UI components/pokemon_movements_info.tscn" type="PackedScene" id=9]

[node name="Pokemon_info_page" type="Control"]
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
margin_left = -2.0
margin_top = 80.0
margin_right = 1024.0
margin_bottom = 608.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_bar" type="Sprite" parent="."]
position = Vector2( 512, 34.3944 )
scale = Vector2( 4.26511, 4.39118 )
texture = ExtResource( 6 )
vframes = 4
frame = 2

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 252.959, 226.36 )
scale = Vector2( 4.25484, 3.709 )
texture = ExtResource( 7 )
hframes = 2

[node name="info_laying" type="TextureRect" parent="."]
margin_left = 510.0
margin_top = 70.0
margin_right = 1023.0
margin_bottom = 599.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer2" type="GridContainer" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 136.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 72, 16 )
custom_constants/vseparation = 22
custom_constants/hseparation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer2"]
margin_right = 181.0
margin_bottom = 37.0
text = "KNOWN MOVEMENTS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GridContainer2"]
margin_top = 59.0
margin_right = 181.0
margin_bottom = 96.0
text = "Level %s %h"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Change_scene_button" parent="." instance=ExtResource( 1 )]
margin_left = 944.0
margin_top = 24.0
margin_right = 985.0
margin_bottom = 47.0
theme = ExtResource( 4 )
text = "BACK"
next_scene_path = "res://Scenes/UI components/Pokemon_info_box_.tscn"

[node name="nickname" type="Label" parent="."]
margin_left = 368.0
margin_top = 91.0
margin_right = 464.0
margin_bottom = 128.0
text = "Nickname"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move1" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 512, 88 )

[node name="move2" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 512, 192 )

[node name="move3" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 512, 296 )

[node name="move4" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 512, 400 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 248, 240 )
scale = Vector2( 3, 3 )
